ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      # FRONTEND (à la racine)
      - path: /()(.*)?
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      # API GATEWAY
      - path: /gateway/?(.*)
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 9000

      # MICROSERVICES
      - path: /product/?(.*)
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8080

      - path: /order/?(.*)
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8081

      - path: /inventory/?(.*)
        pathType: Prefix
        backend:
          service:
            name: inventory-service
            port:
              number: 8082

      - path: /notification/?(.*)
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 8085
